maze.lessons.maze.island.IslandMaze.scala.error
Escaper:11: error: not found: value random
		if (random(1,2)==1) setDirection(Direction.NORTH)
                    ^