maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
def keepHandOnSideWall() ={
	if (!estFaceMur) avance
	else droite
	gauche
	if (estFaceMur) droite
}

	while (!estSurBiscuit) {
		if (random(1,2)==1) setDirection(Direction.NORTH)
		if (estFaceMur) {
			while (estFaceMur && !estSurBiscuit) {
				keepHandOnSideWall
			}
		}
		avance
	}
	prendBiscuit
	
}
